--- a/ecommerce-product-page/style.css
+++ b/ecommerce-product-page/style.css
@@ -2,7 +2,7 @@
   --color-orange-l: hsl(25, 100%, 94%);
   --color-orange: hsl(26, 100%, 55%);
   --color-white: hsl(0, 100%, 100%);
-  --color-grey-l: hsl(223, 64%, 98%);
+  --color-grey-l: hsl(230, 60%, 98%);
   --color-grey: hsl(220, 14%, 75%);
   --color-grey-d: hsl(219, 9%, 45%);
   --color-grey-vd: hsl(220, 13%, 13%);
@@ -70,9 +70,32 @@ button img {
   margin-bottom: 5.4rem;
 }
 
-.cart-btn {
+.cart-btn-container {
   margin-left: auto;
   margin-right: 2.2rem;
+  position: relative;
+}
+
+.cart-btn:hover {
+  filter: invert(10%) sepia(20%) saturate(465%) hue-rotate(178deg)
+    brightness(90%) contrast(92%);
+}
+
+.cart-amount-bubble {
+  position: absolute;
+  display: none;
+  top: -0.7rem;
+  right: -0.5rem;
+  min-width: 1.9rem;
+  height: 1.3rem;
+  padding: 3rem, 0.3rem;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-orange);
+  border-radius: 99rem;
+  font-size: 1rem;
+  color: var(--color-white);
+  font-weight: 700;
 }
 
 .nav {
@@ -130,6 +153,10 @@ button img {
   border: 0.2rem solid var(--color-orange);
 }
 
+.main {
+  position: relative;
+}
+
 .container {
   margin: 2.4rem;
 }
@@ -141,10 +168,6 @@ button img {
 
 .slide {
   display: none;
-}
-
-.active {
-  display: block;
 }
 
 .fade {
@@ -163,7 +186,7 @@ button img {
 
 .slide__img {
   width: 100%;
-  height: 80vw;
+  height: 80svw;
   object-fit: cover;
 }
 
@@ -270,11 +293,10 @@ button img {
   font-weight: 700;
 }
 
-.add-to-cart-btn {
+.primary-btn {
   margin-bottom: 3rem;
   background: var(--color-orange);
   border-radius: 1rem;
-  box-shadow: 0 3rem 2rem -1rem var(--color-orange-l);
   padding: 1.8rem;
   width: 100%;
   display: flex;
@@ -286,8 +308,83 @@ button img {
   font-weight: 700;
 }
 
-.add-to-cart-btn img {
+.add-to-cart-btn {
+  box-shadow: 0 3rem 2rem -1rem var(--color-orange-l);
+}
+
+.primary img {
   height: 1.6rem;
+}
+
+.cart {
+  display: none;
+  position: absolute;
+  top: 0.8rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+  background-color: var(--color-white);
+  border-radius: 1rem;
+  width: 36rem;
+  height: 25.6rem;
+  flex-direction: column;
+}
+
+.cart-title {
+  padding: 2.4rem;
+  border-bottom: solid 0.1rem var(--color-grey);
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.cart-container {
+  height: 100%;
+}
+
+.cart-empty {
+  display: none;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: var(--color-grey-d);
+}
+
+.cart-not-empty {
+  display: none;
+  flex-direction: column;
+  gap: 2.4rem;
+  margin: 2.4rem;
+}
+
+.cart-product {
+  display: flex;
+  gap: 1.6rem;
+}
+.cart-img {
+  height: 5rem;
+}
+
+.cart-detail {
+  font-size: 1.6rem;
+  color: var(--color-grey-d);
+}
+
+.cart-detail p {
+  line-height: 2.6rem;
+}
+
+.cart-total {
+  color: var(--color-grey-vd);
+  font-weight: 700;
+}
+
+.delete-btn {
+  cursor: pointer;
+}
+
+.active {
+  display: flex;
 }
 
 @media (min-width: calc(1110em / 16)) {
