--- a/ecommerce-product-page/style.css
+++ b/ecommerce-product-page/style.css
@@ -43,14 +43,20 @@ html {
   overflow-x: hidden;
 }
 
-body {
+.body {
   min-height: 100dvh;
-  position: relative;
   overflow-x: hidden;
+  display: grid;
+  justify-content: center;
 }
 
-header {
+.outer-card {
+  max-width: 50rem;
+}
+
+.header {
   margin: 2.4rem;
+  user-select: none;
   display: flex;
   align-items: center;
 }
@@ -70,10 +76,13 @@ button img {
   margin-bottom: 5.4rem;
 }
 
-.cart-btn-container {
+.cart-btn-with-cart {
   margin-left: auto;
-  margin-right: 2.2rem;
+}
+
+.cart-btn-container {
   position: relative;
+  margin-right: 2.2rem;
 }
 
 .cart-btn:hover {
@@ -153,10 +162,6 @@ button img {
   border: 0.2rem solid var(--color-orange);
 }
 
-.main {
-  position: relative;
-}
-
 .container {
   margin: 2.4rem;
 }
@@ -185,8 +190,9 @@ button img {
 }
 
 .slide__img {
+  user-select: none;
   width: 100%;
-  height: 80svw;
+  max-height: 30rem;
   object-fit: cover;
 }
 
@@ -203,6 +209,7 @@ button img {
   justify-content: center;
   transition: 0.3s ease;
   user-select: none;
+  transform: translateY(-50%);
 }
 
 .slide-btn:hover {
@@ -241,10 +248,14 @@ button img {
   color: var(--color-grey-d);
 }
 
-.price-continer {
+.price-container {
   margin-bottom: 2.4rem;
   display: flex;
   align-items: center;
+}
+
+.price-with-discount {
+  display: flex;
 }
 
 .price {
@@ -258,6 +269,8 @@ button img {
   padding: 0.5rem 1rem;
   border-radius: 0.6rem;
   background: var(--color-grey-vd);
+  display: flex;
+  align-items: center;
   line-height: 1.6rem;
   font-size: 1.6rem;
   font-weight: 700;
@@ -278,13 +291,14 @@ button img {
   min-height: 5.6rem;
   background: var(--color-grey-l);
   border-radius: 1rem;
+  user-select: none;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .amount-btn {
-  padding: 2.4rem;
+  padding: 2.2rem;
 }
 
 .amount {
@@ -299,6 +313,7 @@ button img {
   border-radius: 1rem;
   padding: 1.8rem;
   width: 100%;
+  user-select: none;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -319,11 +334,13 @@ button img {
 .cart {
   display: none;
   position: absolute;
-  top: 0.8rem;
+  z-index: 1;
+  top: 8.5rem;
   left: 50%;
   transform: translate(-50%, 0);
   background-color: var(--color-white);
   border-radius: 1rem;
+  box-shadow: 0 1rem 5rem var(--color-grey-d);
   width: 36rem;
   height: 25.6rem;
   flex-direction: column;
@@ -388,6 +405,10 @@ button img {
 }
 
 @media (min-width: calc(1110em / 16)) {
+  .outer-card {
+    max-width: 111rem;
+  }
+
   .header {
     padding-bottom: 3.4rem;
     border-bottom: 0.1rem solid var(--color-grey);
@@ -431,5 +452,83 @@ button img {
     padding-bottom: 3.5rem;
     border-bottom: 0.4rem solid var(--color-orange);
     color: var(--color-grey-vd);
+  }
+
+  .cart-btn-with-cart {
+    position: relative;
+  }
+
+  .inner-card {
+    display: flex;
+    margin-top: 9rem;
+    margin: 9rem 4.8rem 4.8rem 4.8rem;
+    gap: 12.5rem;
+  }
+
+  .carousel {
+    margin: 0;
+  }
+
+  .slide__img {
+    width: 44.5rem;
+    height: 44.5rem;
+    max-height: unset;
+  }
+
+  .slide-btn {
+    display: none;
+  }
+
+  .container {
+    margin: 0;
+    width: 44.5rem;
+    height: 44.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .control-container {
+    display: flex;
+    gap: 1.6rem;
+  }
+
+  .product__title {
+    margin-bottom: 3.2rem;
+    font-size: 4.4rem;
+    line-height: 4.8rem;
+  }
+
+  .price-container {
+    margin-bottom: 3.2rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .price-with-discount {
+    margin-right: auto;
+  }
+
+  .previous-price {
+    margin: 1rem auto 0 0;
+  }
+
+  .amount-container,
+  .add-to-cart-btn {
+    margin-bottom: 0;
+  }
+
+  .amount {
+    width: 4.5rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .add-to-cart-btn {
+    box-shadow: unset;
+  }
+
+  .cart {
+    top: 4rem;
   }
 }
