ecommerce product page - desktop carousel

--- a/ecommerce-product-page/style.css
+++ b/ecommerce-product-page/style.css
@@ -224,6 +224,36 @@ button img {
   right: 1.6rem;
 }
 
+.thumbnail-nav {
+  display: none;
+  user-select: none;
+}
+
+.thumbnail {
+  object-fit: contain;
+  cursor: pointer;
+}
+
+.thumbnail:hover {
+  opacity: 50%;
+}
+
+.thumbnail--active {
+  opacity: 50%;
+}
+
+.thumbnail__img {
+  max-height: 100%;
+  max-width: 100%;
+  border: 0.2rem solid rgba(0, 0, 0, 0);
+  border-radius: 1rem;
+  display: block;
+}
+
+.thumbnail--active .thumbnail__img {
+  border: 0.2rem solid var(--color-orange);
+}
+
 .subtitle {
   margin-bottom: 1.6rem;
   letter-spacing: 0.185rem;
@@ -467,20 +497,26 @@ button img {
 
   .carousel {
     margin: 0;
+    max-width: 44.5rem;
   }
 
   .slide__img {
-    width: 44.5rem;
-    height: 44.5rem;
     max-height: unset;
+    border-radius: 1.5rem;
   }
 
   .slide-btn {
     display: none;
   }
 
+  .thumbnail-nav {
+    margin-top: 3.2rem;
+    display: flex;
+    gap: 3.2rem;
+  }
+
   .container {
-    margin: 0;
+    margin: auto;
     width: 44.5rem;
     height: 44.5rem;
     display: flex;
