--- a/ecommerce-product-page/style.css
+++ b/ecommerce-product-page/style.css
@@ -124,7 +124,7 @@ button img {
 
 .nav-open[aria-expanded="true"] ~ .nav {
   transform: translateX(0);
-  box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 0 100vmax var(--color-black-transparent);
 }
 
 .nav__list {
@@ -212,8 +212,9 @@ button img {
   transform: translateY(-50%);
 }
 
-.slide-btn:hover {
-  scale: 1.2;
+.slide-btn:hover img {
+  filter: brightness(0) saturate(100%) invert(60%) sepia(86%) saturate(2793%)
+    hue-rotate(347deg) brightness(101%) contrast(101%);
 }
 
 .btn--prev {
@@ -252,6 +253,68 @@ button img {
 
 .thumbnail--active .thumbnail__img {
   border: 0.2rem solid var(--color-orange);
+}
+
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--color-black-transparent);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+.lightbox-content {
+  max-width: 55rem;
+}
+
+.fill {
+  display: flex;
+}
+
+.close-lightbox {
+  margin-left: auto;
+  margin-bottom: 2.4rem;
+  user-select: none;
+}
+
+.close-lightbox__img {
+  height: 2rem;
+  width: 2rem;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(17%) saturate(7499%)
+    hue-rotate(292deg) brightness(111%) contrast(117%);
+}
+
+.close-lightbox__img:hover {
+  filter: brightness(0) saturate(100%) invert(60%) sepia(86%) saturate(2793%)
+    hue-rotate(347deg) brightness(101%) contrast(101%);
+}
+
+.lightbox-carousel {
+  position: relative;
+}
+
+.lightbox .slide {
+  max-height: 55rem;
+  max-width: 55rem;
+}
+
+.lightbox .slide-btn {
+  width: 5.6rem;
+  height: 5.6rem;
+}
+
+.lightbox .btn--prev {
+  left: -2.8rem;
+}
+
+.lightbox .btn--next {
+  right: -2.8rem;
 }
 
 .subtitle {
@@ -507,6 +570,10 @@ button img {
 
   .slide-btn {
     display: none;
+  }
+
+  .lightbox .slide-btn {
+    display: grid;
   }
 
   .thumbnail-nav {
