--- a/bmi-calculator/style.css
+++ b/bmi-calculator/style.css
@@ -8,7 +8,7 @@
   --color-blue: #345ff6;
   --color-blue-d: #253347;
   --color-blue-shadow: #e1e7feb3;
-  --color-grade-1: #d6fcfe;
+  --color-grade-1: #d6fcfe00;
   --color-grade-2: #d6e6fe;
 }
 
@@ -25,10 +25,8 @@
   box-sizing: border-box;
 }
 
-button {
+input {
   cursor: pointer;
-  border: none;
-  background: none;
 }
 
 .text-1 {
@@ -87,6 +85,7 @@ button {
 html {
   font-family: inter;
   font-size: 62.5%;
+  user-select: none;
 }
 
 .gradient {
@@ -95,12 +94,26 @@ html {
   z-index: -1;
   width: 100%;
   height: 64rem;
-  background: linear-gradient(to right, transparent, var(--color-grade-2));
+  background: linear-gradient(
+    to right,
+    var(--color-grade-1),
+    var(--color-grade-2)
+  );
   background-repeat: no-repeat;
   border-radius: 0 0 3.5rem 0;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.content {
+  max-width: 40rem;
+}
+
 .main {
+  margin-bottom: 6.4rem;
   padding: 3.2rem 2.4rem;
   display: flex;
   flex-direction: column;
@@ -137,6 +150,7 @@ html {
   border-radius: 1.6rem;
   box-shadow: 0 1.2rem 2.4rem var(--color-blue-shadow);
   width: 100%;
+  user-select: none;
   text-align: left;
 }
 
@@ -291,6 +305,7 @@ input[type="radio"]:checked::before {
 }
 
 .bmi__explanation {
+  user-select: text;
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 150%;
@@ -298,6 +313,136 @@ input[type="radio"]:checked::before {
 
 .bmi__explanation strong {
   font-weight: 700;
+}
+
+.hero-image {
+  margin-bottom: 4.8rem;
+  max-width: 100%;
+}
+
+.meaning-aside {
+  margin: 0 2.35rem 4.8rem 2.35rem;
+}
+
+.meaning__title {
+  margin-bottom: 3.2rem;
+  color: var(--color-blue-d);
+  font-size: 3.2rem;
+  font-weight: 600;
+  line-height: 110%;
+  letter-spacing: -0.05em;
+}
+
+.meaning_description {
+  color: var(--color-grey-d);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.tips-aside {
+  margin-bottom: 8.2rem;
+  padding: 4.8rem 2.4rem;
+  background: linear-gradient(
+    to right,
+    var(--color-grade-1),
+    var(--color-grade-2)
+  );
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+.tip {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+.tip__icon {
+  width: 6.4rem;
+  height: 6.4rem;
+}
+
+.tip__title {
+  margin-bottom: 2.4rem;
+  color: var(--color-blue-d);
+  font-size: 2.4rem;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.05em;
+}
+
+.tip__description {
+  color: var(--color-grey-d);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.limitations-aside {
+  margin: 0 2.4rem 8.2rem 2.4rem;
+  display: grid;
+  gap: 1.6rem;
+}
+
+.limitations-text {
+  margin-bottom: 4rem;
+  text-align: center;
+}
+
+.limitations-text__title {
+  margin-bottom: 3.2rem;
+  color: var(--color-blue-d);
+  font-size: 3.2rem;
+  font-weight: 600;
+  line-height: 110%;
+  letter-spacing: -0.05em;
+}
+
+.limitations-text-description {
+  color: var(--color-grey-d);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.limitations {
+  display: flex;
+}
+
+.limitation {
+  padding: 2.4rem;
+  box-shadow: 0 2.4em 2.4rem var(--color-blue-shadow);
+  border-radius: 1.6rem;
+  display: grid;
+  gap: 1.6rem;
+}
+
+.limitation__header {
+  display: flex;
+  gap: 1.6rem;
+  align-items: center;
+}
+
+.limitation__icon {
+  width: 3.2rem;
+  height: 3.2rem;
+}
+
+.limitation__title {
+  color: var(--color-blue-d);
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.05em;
+}
+
+.limitation__description {
+  color: var(--color-grey-d);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 150%;
 }
 
 .hidden {
