--- a/bmi-calculator/style.css
+++ b/bmi-calculator/style.css
@@ -108,10 +108,6 @@ html {
   justify-content: center;
 }
 
-.content {
-  max-width: 40rem;
-}
-
 .main {
   margin-bottom: 6.4rem;
   padding: 3.2rem 2.4rem;
@@ -121,8 +117,14 @@ html {
   text-align: center;
 }
 
+.title-description {
+  display: grid;
+  justify-items: center;
+}
+
 .title-main {
   margin-bottom: 2.4rem;
+  max-width: 30rem;
   color: var(--color-blue-d);
   font-size: 4.8rem;
   font-weight: 600;
@@ -320,7 +322,7 @@ input[type="radio"]:checked::before {
   max-width: 100%;
 }
 
-.meaning-aside {
+.meaning {
   margin: 0 2.35rem 4.8rem 2.35rem;
 }
 
@@ -447,4 +449,114 @@ input[type="radio"]:checked::before {
 
 .hidden {
   display: none;
+}
+
+@media (min-width: calc(768em / 16)) {
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main {
+    width: 68.6rem;
+    padding: 3.2rem 0 0 0;
+  }
+
+  .title-main {
+    max-width: 40rem;
+  }
+
+  .logo,
+  .description {
+    margin-bottom: 4rem;
+  }
+
+  .calculator {
+    padding: 3.2rem;
+  }
+
+  .title-calc,
+  .units,
+  .measurements {
+    margin-bottom: 3.2rem;
+  }
+
+  .unit {
+    gap: 3.2rem;
+  }
+
+  .metric {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .bmi {
+    border-radius: 1.6rem 999rem 999rem 1.6rem;
+  }
+
+  .bmi--result {
+    grid-template-columns: 1fr 1fr;
+    gap: 2.4rem;
+    align-items: center;
+  }
+
+  .meaning-aside {
+    max-width: 76.8rem;
+    overflow: hidden;
+    margin-bottom: 9.6rem;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .meaning-inner {
+    width: 84.1rem;
+    display: grid;
+    grid-template-columns: 435fr 331fr;
+    gap: 7.2rem;
+    flex-shrink: 0;
+  }
+
+  .hero-image,
+  .meaning {
+    margin: unset;
+  }
+
+  .meaning {
+    display: grid;
+    align-content: center;
+  }
+
+  .tips-aside {
+    width: 100%;
+    align-items: center;
+  }
+
+  .tip,
+  .limitations-aside {
+    max-width: 68.6rem;
+  }
+
+  .tip {
+    flex-direction: row;
+    gap: 4rem;
+  }
+
+  .limitations-aside {
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+  }
+
+  .limitations-text,
+  .limit--5 {
+    grid-column: span 2;
+  }
+
+  .limit--5 {
+    max-width: 33.5rem;
+  }
+
+  .limitation {
+    padding: 3.2rem;
+  }
 }
