--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -1,5 +1,6 @@
 :root {
   --color-green: #31c3bd;
+  --color-green-s: #118c87;
   --color-green-l: #65e9e4;
   --color-orange: #f2b137;
   --color-orange-s: #cc8b13;
@@ -31,6 +32,10 @@ button {
   cursor: pointer;
 }
 
+input[type="radio"] {
+  appearance: none;
+}
+
 html {
   background-color: var(--color-grey-vd);
   font-family: outfit;
@@ -59,6 +64,81 @@ html {
   margin: 2.35rem;
   max-width: 46rem;
   background-color: var(--color-grey-vd);
+}
+
+.menu {
+  height: 100%;
+  display: grid;
+  gap: 3.2rem;
+  justify-items: center;
+  align-content: center;
+}
+
+.choose-token {
+  padding: 2.4rem;
+  border-radius: 1.5rem;
+  box-shadow: 0 0.4rem var(--color-grey-d-s);
+  background-color: var(--color-grey-d);
+  display: grid;
+  justify-items: center;
+}
+
+.choose__top {
+  margin-bottom: 2.4rem;
+  font-weight: bold;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+}
+
+.choose__tokens {
+  width: 100%;
+  margin-bottom: 1.6rem;
+  padding: 0.9rem;
+  border-radius: 1rem;
+  background-color: var(--color-grey-vd);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.choose__token {
+  border-radius: 1rem;
+  height: 5.4rem;
+  width: 100%;
+}
+
+.choose__token:has(.token:focus) {
+  outline: var(--color-grey-l) solid 0.2rem;
+}
+
+.choose__token:has(.token:checked) {
+  background-color: var(--color-grey-s);
+}
+
+.token {
+  height: 100%;
+  width: 100%;
+  background-size: 3.2rem 3.2rem;
+  background-repeat: no-repeat;
+  background-position: center center;
+  filter: brightness(0) saturate(100%) invert(78%) sepia(11%) saturate(389%)
+    hue-rotate(153deg) brightness(94%) contrast(91%);
+}
+
+.token:checked {
+  filter: brightness(0) saturate(100%) invert(16%) sepia(14%) saturate(994%)
+    hue-rotate(158deg) brightness(97%) contrast(102%);
+}
+
+.choose__bottom {
+  font-weight: bold;
+  font-size: 1.4rem;
+  letter-spacing: 0.088rem;
+}
+
+.menu__buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
 }
 
 .game {
@@ -276,12 +356,29 @@ html {
   box-shadow: 0 0.4rem var(--color-grey-s);
 }
 
+.btn--tertiary {
+  background-color: var(--color-green);
+  box-shadow: 0 0.4rem var(--color-green-s);
+}
+
 .hidden {
   display: none;
+}
+
+@media (min-width: calc(375em / 16)) {
+  .choose-token,
+  .menu__buttons {
+    min-width: 32.7rem;
+  }
 }
 
 @media (min-width: calc(768em / 16)) {
   .outer {
     align-items: center;
+  }
+
+  .choose-token,
+  .menu__buttons {
+    width: 46rem;
   }
 }
