--- a/sass-bem-beginners/app/css/globals/_typography.scss
+++ b/sass-bem-beginners/app/css/globals/_typography.scss
@@ -1,3 +1,5 @@
+@use "../util" as u;
+
 h1,
 h2,
 h3 {
@@ -6,7 +8,29 @@ h3 {
   margin-top: 0;
 }
 
+h1 {
+  font-size: u.rem(28);
+
+  // @include u.breakpoint(medium) {
+  //   font-size: 2.25rem;
+  // }
+
+  // @include u.breakpoint(large) {
+  //   font-size: 2.625rem;
+  // }
+
+  font-size: 7.5vw;
+  font-size: calc(16px + 2vw);
+  font-size: clamp(28px, 16px + 2vw, 40px);
+  font-size: clamp(u.rem(28), 1.5357rem + 1.0714vw, u.rem(40));
+}
+
+h2 {
+  font-size: clamp(1.375rem, 1.125rem + 1.25vw, 2.25rem);
+}
+
 p {
+  font-size: 1rem;
   margin-top: 0;
 }
 
