--- a/sass-bem-beginners/app/css/style.css
+++ b/sass-bem-beginners/app/css/style.css
@@ -3,6 +3,10 @@
   --color-text: hsl(0, 0%, 100%);
 }
 
+.primary {
+  color: var(--color-background);
+}
+
 @font-face {
   font-family: open-sans;
   src: url("../fonts/open-sans.ttf");
@@ -34,7 +38,20 @@ h3 {
   margin-top: 0;
 }
 
+h1 {
+  font-size: 1.75rem;
+  font-size: 7.5vw;
+  font-size: calc(16px + 2vw);
+  font-size: clamp(28px, 16px + 2vw, 40px);
+  font-size: clamp(1.75rem, 1.5357rem + 1.0714vw, 2.5rem);
+}
+
+h2 {
+  font-size: clamp(1.375rem, 1.125rem + 1.25vw, 2.25rem);
+}
+
 p {
+  font-size: 1rem;
   margin-top: 0;
 }
 
@@ -49,6 +66,14 @@ a:active {
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
   gap: 2.5rem;
+  width: min(100% - 2.5rem, 62.5rem);
+  margin-inline: auto;
+}
+@media (min-width: 56.25em) {
+  .grid {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto;
+  }
 }
 .grid__main, .grid__sidebar {
   padding: 2.5rem;
@@ -56,12 +81,30 @@ a:active {
 .grid__main {
   background-color: hsl(240, 100%, 33%);
 }
-.grid__sidebar {
+@media (min-width: 43.75em) {
+  .grid__main {
+    background-color: hsl(180, 100%, 33%);
+  }
+}
+@media (min-width: 56.25em) {
+  .grid__main {
+    background-color: hsl(120, 100%, 33%);
+  }
+}
+@media (max-width: 56.24875em) {
+  .grid__sidebar {
+    text-align: center;
+  }
+}
+@media (max-width: 43.74875em) {
+  .grid__sidebar {
+    text-align: right;
+  }
+}
+.grid__widget, .grid__widget--secondary {
+  padding: 1rem;
   background-color: hsl(300, 100%, 33%);
 }
-
-@media (min-width: 48em) {
-  .grid {
-    grid-template-columns: 1fr 1fr;
-  }
+.grid__widget--secondary {
+  background-color: hsl(0, 100%, 33%);
 }/*# sourceMappingURL=style.css.map */
