--- a/loopstudios-landing-page/css/base/_base.scss
+++ b/loopstudios-landing-page/css/base/_base.scss
@@ -6,6 +6,7 @@
 
 * {
   margin: 0;
+  padding: 0;
 }
 
 img,
@@ -22,4 +23,13 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+html {
+  font-size: 100%;
 }
