--- a/loopstudios-landing-page/css/base/_typography.scss
+++ b/loopstudios-landing-page/css/base/_typography.scss
@@ -1,3 +1,29 @@
+@use "../abstracts";
+
 body {
+  font-family: alta, sans-serif;
+  color: var(--colors-black);
+}
+
+h1,
+h2,
+h3 {
   font-family: josefinsans, sans-serif;
+  line-height: 1;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: abstracts.rem(40);
+}
+
+h2 {
+  font-size: abstracts.rem(32);
+}
+
+p {
+  font-size: abstracts.rem(15);
+  line-height: 1.65;
+  opacity: 50%;
 }
