--- a/loopstudios-landing-page/css/pages/_landing.scss
+++ b/loopstudios-landing-page/css/pages/_landing.scss
@@ -54,6 +54,10 @@ p {
   place-content: center;
   word-spacing: 100vw;
   color: var(--colors-white);
+
+  @media (min-width: a.$media-tablet) {
+    word-spacing: unset;
+  }
 }
 
 .splash {
@@ -64,6 +68,10 @@ p {
   background-position: center;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
+
+  @media (min-width: a.$media-tablet) {
+    background-image: url("../images/desktop/image-hero.jpg");
+  }
 }
 
 .intro {
@@ -143,29 +151,81 @@ p {
 }
 
 .footer {
-  padding: a.rem(56) 0;
   background-color: var(--colors-black);
-  display: grid;
-  place-content: center;
   color: var(--colors-white);
 
+  &__wrapper {
+    padding-block: a.rem(56);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:
+      auto
+      2.5rem
+      auto
+      2.5rem
+      auto
+      1rem
+      auto;
+    grid-template-areas:
+      "logo"
+      "."
+      "links"
+      "."
+      "socials"
+      "."
+      "copyright";
+    place-content: center;
+
+    @media (min-width: a.$media-tablet) {
+      padding-block: a.rem(43.5);
+      grid-template-columns: auto 1fr auto;
+      grid-template-rows:
+        auto
+        1.5rem
+        auto;
+      grid-template-areas:
+        "logo . socials"
+        ". . ."
+        "links . copyright";
+    }
+  }
+
   &__logo {
-    margin-bottom: 2.5rem;
+    height: 1.5rem;
+    grid-area: logo;
     justify-self: center;
+
+    @media (min-width: a.$media-tablet) {
+      justify-self: flex-start;
+    }
   }
 
   &__links {
-    margin-bottom: 2.5rem;
-    text-align: center;
+    grid-area: links;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    font-size: a.rem(15);
+    text-align: center;
+    line-height: a.rem(25);
+
+    @media (min-width: a.$media-tablet) {
+      flex-direction: row;
+    }
   }
 
   &__socials {
-    margin-bottom: 1rem;
+    grid-area: socials;
     justify-self: center;
     display: flex;
     gap: 1rem;
+
+    @media (min-width: a.$media-tablet) {
+      justify-self: flex-end;
+    }
+  }
+
+  &__copyright {
+    grid-area: copyright;
   }
 }
