--- a/loopstudios-landing-page/css/style.css
+++ b/loopstudios-landing-page/css/style.css
@@ -65,6 +65,11 @@ h3 {
 h1 {
   font-size: 2.5rem;
 }
+@media (min-width: 48rem) {
+  h1 {
+    font-size: 4.5rem;
+  }
+}
 
 h2 {
   font-size: 2rem;
@@ -131,6 +136,11 @@ p {
   word-spacing: 100vw;
   color: var(--colors-white);
 }
+@media (min-width: 48rem) {
+  .main-title {
+    word-spacing: unset;
+  }
+}
 
 .splash {
   margin-bottom: 6rem;
@@ -140,6 +150,11 @@ p {
   background-position: center;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
+}
+@media (min-width: 48rem) {
+  .splash {
+    background-image: url("../images/desktop/image-hero.jpg");
+  }
 }
 
 .intro {
@@ -204,26 +219,60 @@ p {
 }
 
 .footer {
-  padding: 3.5rem 0;
   background-color: var(--colors-black);
-  display: grid;
-  place-content: center;
   color: var(--colors-white);
 }
+.footer__wrapper {
+  padding-block: 3.5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 2.5rem auto 2.5rem auto 1rem auto;
+  grid-template-areas: "logo" "." "links" "." "socials" "." "copyright";
+  place-content: center;
+}
+@media (min-width: 48rem) {
+  .footer__wrapper {
+    padding-block: 2.71875rem;
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 1.5rem auto;
+    grid-template-areas: "logo . socials" ". . ." "links . copyright";
+  }
+}
 .footer__logo {
-  margin-bottom: 2.5rem;
+  height: 1.5rem;
+  grid-area: logo;
   justify-self: center;
 }
+@media (min-width: 48rem) {
+  .footer__logo {
+    justify-self: flex-start;
+  }
+}
 .footer__links {
-  margin-bottom: 2.5rem;
-  text-align: center;
+  grid-area: links;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  font-size: 0.9375rem;
+  text-align: center;
+  line-height: 1.5625rem;
+}
+@media (min-width: 48rem) {
+  .footer__links {
+    flex-direction: row;
+  }
 }
 .footer__socials {
-  margin-bottom: 1rem;
+  grid-area: socials;
   justify-self: center;
   display: flex;
   gap: 1rem;
+}
+@media (min-width: 48rem) {
+  .footer__socials {
+    justify-self: flex-end;
+  }
+}
+.footer__copyright {
+  grid-area: copyright;
 }/*# sourceMappingURL=style.css.map */
