loopstudios landing page - popout menu

--- a/loopstudios-landing-page/css/base/_base.scss
+++ b/loopstudios-landing-page/css/base/_base.scss
@@ -22,7 +22,13 @@ input,
 button,
 textarea,
 select {
+  cursor: pointer;
   font: inherit;
+}
+
+button {
+  background: none;
+  border: none;
 }
 
 ul,
