--- a/loopstudios-landing-page/css/base/_typography.scss
+++ b/loopstudios-landing-page/css/base/_typography.scss
@@ -16,15 +16,27 @@ h3 {
 }
 
 h1 {
-  font-size: a.rem(40);
+  font-size: 2.5rem;
 
   @media (min-width: a.$media-tablet) {
-    font-size: a.rem(72);
+    font-size: 4.5rem;
   }
 }
 
 h2 {
-  font-size: a.rem(32);
+  font-size: 2rem;
+
+  @media (min-width: a.$media-tablet) {
+    font-size: 3rem;
+  }
+}
+
+h3 {
+  font-size: 1.5rem;
+
+  @media (min-width: a.$media-tablet) {
+    font-size: 2rem;
+  }
 }
 
 p {
